--- a/config/config.json
+++ b/config/config.json
@@ -6,18 +6,11 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
   "production": {
-    "username": "root",
-    "password": null,
+    "username": "bcnaotuin8ugz87v",
+    "password": "oiglprxwcw7o5z6c",
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": " r4919aobtbi97j46.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
