--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
   "production": {
     "username": "bcnaotuin8ugz87v",
     "password": "oiglprxwcw7o5z6c",
-    "database": "database_production",
+    "database": "hyqub91sskhoabhs",
     "host": " r4919aobtbi97j46.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
