--- a/config/config.json
+++ b/config/config.json
@@ -7,10 +7,6 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "bcnaotuin8ugz87v",
-    "password": "oiglprxwcw7o5z6c",
-    "database": "hyqub91sskhoabhs",
-    "host": " r4919aobtbi97j46.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-    "dialect": "mysql"
+    "use_env_variable": "JAWSDB_URL"
   }
 }
